feat(tab1): First login proposal

--- a/Growth/src/app/tab1/tab1.page.html
+++ b/Growth/src/app/tab1/tab1.page.html
@@ -13,5 +13,13 @@
     </ion-toolbar>
   </ion-header>
 
+  <div id="back">
+    <div class="loginDiv">
+        <div id="login">
+
+        </div>
+    </div>
+</div>
+
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
